React II: Componentes Funcionais e Hooks | FINALIZADO!

--- a/React/React II - Componentes Funcionais e Hooks/primeiro-projeto/src/components/Article/styles.css
+++ b/React/React II - Componentes Funcionais e Hooks/primeiro-projeto/src/components/Article/styles.css
@@ -5,7 +5,8 @@
 
 #article img {
   border-radius: 1rem;
-  min-width: 200px;
+  min-width: 250px;
+  max-height: 175px ;
 }
 
 #article .article-infos h2 {
