--- a/React/React II - Componentes Funcionais e Hooks/todo-list/src/components/Tasks/styles.module.scss
+++ b/React/React II - Componentes Funcionais e Hooks/todo-list/src/components/Tasks/styles.module.scss
@@ -36,4 +36,44 @@
         }
 
     }
+    ul {
+        list-style: none;
+        margin-top: 1rem;
+        padding: 0 .25rem;
+        max-width: 1240px;
+        li{
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+            border: 2px solid #222;
+            padding: 0 .5rem;
+            border-radius: .5rem;
+            background-color: aliceblue;
+            width: 100%;
+            margin: .5rem 0;
+            justify-content: space-between;
+            input{
+                height: 1rem;
+                width: 1rem;
+                margin: .5rem;
+            }
+            label{
+                font-size: 1.1rem;
+            }
+            button {
+                width: 5rem;
+                border: none;
+                border-radius: .6rem;
+                background-color: lightblue;
+                cursor: pointer;
+            }
+            button:hover{
+                background-color: rgb(173, 200, 230);
+            }
+        }
+       
+    }
+}
+.done {
+    text-decoration: line-through;
 }
